tester/testsuite/extensions/arrays1/bad/bad003.jl
int main() {
    int[] xs = new int[5];

    printInt(xs.foo);

    return 1;
}
